--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -58,7 +58,7 @@
           {%- endif -%}
 
           {%- if section.settings.title != blank -%}
-            <h3 class="heading h2">{{ section.settings.title | escape }}</h3>
+            <div class="heading h2">{{ section.settings.title | escape }}</div>
           {%- endif -%}
         </header>
       {%- endif -%}
