--- a/sections/featured-collections.liquid
+++ b/sections/featured-collections.liquid
@@ -75,7 +75,7 @@
               {%- endif -%}
 
               {%- if section.settings.title != blank -%}
-                <h3 class="heading h2">{{ section.settings.title }}</h3>
+                <div class="customLabel h2"><strong>{{ section.settings.title }}</strong></div>
               {%- endif -%}
 
               {%- if section.settings.content != blank -%}
