--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -142,7 +142,7 @@ IMPLEMENTATION NOTE: the header in Focal is pretty complex as it allows a lot of
               <input type="hidden" name="options[unavailable_products]" value="{{ settings.search_unavailable_products }}">
 
               {%- render 'icon' with 'header-search' -%}
-              <input class="predictive-search__input" is="predictive-search-input" type="text" name="q" autocomplete="off" autocorrect="off" aria-controls="search-drawer" aria-expanded="false" aria-label="{{ 'search.general.title' | t }}" placeholder="{{ 'search.general.search_placeholder' | t }}">
+              <input class="predictive-search__input" is="predictive-search-input" type="text" name="q" autocomplete="off" autocorrect="off" aria-label="{{ 'search.general.title' | t }}" placeholder="{{ 'search.general.search_placeholder' | t }}">
             </form>
           </div>
         {%- endif -%}
