--- a/sections/multi-column-david.liquid
+++ b/sections/multi-column-david.liquid
@@ -81,7 +81,7 @@
             {%- endif -%}
 
             {%- if section.settings.title != blank -%}
-              <h3 class="heading h2">{{ section.settings.title }}</h3>
+              <div class="heading h2">{{ section.settings.title }}</div>
             {%- endif -%}
 
             {%- if section.settings.content != blank -%}
