--- a/sections/timeline.liquid
+++ b/sections/timeline.liquid
@@ -58,7 +58,7 @@
       {%- endif -%}
 
       {%- if section.settings.title != blank -%}
-        <h3 class="heading h2">{{ section.settings.title | escape }}</h3>
+        <div class="heading h2">{{ section.settings.title | escape }}</div>
       {%- endif -%}
     </header>
 
@@ -76,7 +76,7 @@
           </prev-next-buttons>
         {% endif %}
 
-        <div class="timeline__list-wrapper hide-scrollbar">
+        <div class="timeline__list-wrapper hide-scrollbar" tabindex="0">
           <div class="container">
             <div class="timeline__list">
               {%- for block in section.blocks -%}
