--- a/templates/page.tpt_5ddfed3.liquid
+++ b/templates/page.tpt_5ddfed3.liquid
@@ -77,7 +77,7 @@
         </div>
 
         
-                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-10' style='opacity: 0'><div id="widget-html12283979691661829044" class="widget-inner block-content "><center><span style="font-size:20px;color:#858585;line-height:28px;">“When we opened, we had three main goals: to provide outstanding products from the finest manufacturers, to offer an excellent selection of merchandise and to provide unparalleled customer service.</span></center><center></center><br><center><span style="font-size:20px;color:#858585;line-height:28px;">We pride ourselves in holding these same goals today. We take the steps to educate our staff extensively on the products we carry and aim to make your life comfortable, no matter the conditions of your adventure. This is YOUR store.”</span></center><center></center><center></center></div></div>
+                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-10' style='opacity: 0'><div class="widget-inner block-content "><center><span style="font-size:20px;color:#858585;line-height:28px;">“When we opened, we had three main goals: to provide outstanding products from the finest manufacturers, to offer an excellent selection of merchandise and to provide unparalleled customer service.</span></center><center></center><br><center><span style="font-size:20px;color:#858585;line-height:28px;">We pride ourselves in holding these same goals today. We take the steps to educate our staff extensively on the products we carry and aim to make your life comfortable, no matter the conditions of your adventure. This is YOUR store.”</span></center><center></center><center></center></div></div>
                                 <script>
                                 var timmerTime = (window && window.screen && window.screen.width && window.screen.width < 1024) ? 1000: 300;
                                     var timer_10_counter = 0;
@@ -112,7 +112,7 @@
                                 }, timmerTime);
                                 </script>
                             
-                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-5' style='opacity: 0'><div id="widget-html12283979691661829044" class="widget-inner block-content "><center><span style="font-size:20px;color:#858585;line-height:28px;">“When we opened, we had three main goals: to provide outstanding products from the finest manufacturers, to offer an excellent selection of merchandise and to provide unparalleled customer service.</span></center><center></center><br><center><span style="font-size:20px;color:#858585;line-height:28px;">We pride ourselves in holding these same goals today. We take the steps to educate our staff extensively on the products we carry and aim to make your life comfortable, no matter the conditions of your adventure. This is YOUR store.”</span></center><center></center><center></center></div></div>
+                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-5' style='opacity: 0'><div class="widget-inner block-content "><center><span style="font-size:20px;color:#858585;line-height:28px;">“When we opened, we had three main goals: to provide outstanding products from the finest manufacturers, to offer an excellent selection of merchandise and to provide unparalleled customer service.</span></center><center></center><br><center><span style="font-size:20px;color:#858585;line-height:28px;">We pride ourselves in holding these same goals today. We take the steps to educate our staff extensively on the products we carry and aim to make your life comfortable, no matter the conditions of your adventure. This is YOUR store.”</span></center><center></center><center></center></div></div>
                                 <script>
                                 var timmerTime = (window && window.screen && window.screen.width && window.screen.width < 1024) ? 1000: 300;
                                     var timer_5_counter = 0;
@@ -217,7 +217,7 @@
                                 }, timmerTime);
                                 </script>
                             
-                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-17' style='opacity: 0'><center><div class="videoWrapper"><iframe src="https://www.youtube.com/embed/RtHf8_uIFKM?rel=0&amp;hd=1" width="100%" height="100%" frameborder="0"></iframe></div></center></div>
+                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-17' style='opacity: 0'><center><div class="videoWrapper"><iframe title="Youtube Video Player" src="https://www.youtube.com/embed/RtHf8_uIFKM?rel=0&amp;hd=1" width="100%" height="100%" frameborder="0"></iframe></div></center></div>
                                 <script>
                                 var timmerTime = (window && window.screen && window.screen.width && window.screen.width < 1024) ? 1000: 300;
                                     var timer_17_counter = 0;
@@ -252,7 +252,7 @@
                                 }, timmerTime);
                                 </script>
                             
-                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-30' style='opacity: 0'><center><div class="videoWrapper"><iframe src="https://www.youtube.com/embed/RtHf8_uIFKM?rel=0&amp;hd=1" width="100%" height="348" frameborder="0"></iframe></div></center></div>
+                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-30' style='opacity: 0'><center><div class="videoWrapper"><iframe title="Youtube Video Player" src="https://www.youtube.com/embed/RtHf8_uIFKM?rel=0&amp;hd=1" width="100%" height="348" frameborder="0"></iframe></div></center></div>
                                 <script>
                                 var timmerTime = (window && window.screen && window.screen.width && window.screen.width < 1024) ? 1000: 300;
                                     var timer_30_counter = 0;
