--- a/templates/page.tpt_e369628.liquid
+++ b/templates/page.tpt_e369628.liquid
@@ -77,7 +77,7 @@
         </div>
 
         
-                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-51' style='opacity: 0'><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8254.141953691389!2d-98.59355112267878!3d29.561822134658854!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9c2fdb0e5fb28b!2sGood%20Sports%20Outdoor%20Outfitters!5e0!3m2!1sen!2sus!4v1660055572613!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-51' style='opacity: 0'><iframe title="Google Maps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8254.141953691389!2d-98.59355112267878!3d29.561822134658854!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9c2fdb0e5fb28b!2sGood%20Sports%20Outdoor%20Outfitters!5e0!3m2!1sen!2sus!4v1660055572613!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                                 <script>
                                 var timmerTime = (window && window.screen && window.screen.width && window.screen.width < 1024) ? 1000: 300;
                                     var timer_51_counter = 0;
@@ -112,7 +112,7 @@
                                 }, timmerTime);
                                 </script>
                             
-                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-64447' style='opacity: 0'><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13880.133294876376!2d-98.5879683!3d29.5736337!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4dc6547aace8bdb7!2sGood%20Sports%20Outdoors%20Outlet!5e0!3m2!1sen!2sus!4v1660056209036!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                                <div class='spb-customerhtml-serverrender spb-customerhtml-serverrender-64447' style='opacity: 0'><iframe title="Google Maps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13880.133294876376!2d-98.5879683!3d29.5736337!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4dc6547aace8bdb7!2sGood%20Sports%20Outdoors%20Outlet!5e0!3m2!1sen!2sus!4v1660056209036!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                                 <script>
                                 var timmerTime = (window && window.screen && window.screen.width && window.screen.width < 1024) ? 1000: 300;
                                     var timer_64447_counter = 0;
